@@ -1,3 +1,9 @@
+08/09/2011 Changes
+
+Changed use of "/" in some places to use File.separator, so things work on windows.
+(Suggestion from Stefan Krecher)
+
+
 07/09/2011 Changes
 
 Adjusted snapshot version number.
